<resources>
    <string name="app_name">Vehicle Tracker</string>

    <string name="action_home">Home</string>
    <string name="action_history">History</string>
    <string name="action_more">More</string>

    <!--Login Activity-->
    <string name="login">Login</string>
    <string name="id">Id</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="empty_id">Id is empty!</string>
    <string name="empty_password">Password is empty!</string>

    <!--More Fragment-->
    <string name="logout">Logout</string>

    <string-array name="number_plates">
        <item>29F1-11023</item>
        <item>29F1-11024</item>
    </string-array>

    <string name="please_wait">Please wait!!!</string>
    <string name="old_pass">Old password</string>
    <string name="new_pass">New password</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="change_pass">Change password</string>
    <string name="not_full_info">You haven\'t entered full information</string>
    <string name="wrong_old_pass">Your old password is wrong!!!</string>
    <string name="cannot_upadte">Cannot update!!!</string>
    <string name="update_successfully">Update successfully!!!</string>
    <string name="network_error">Unavailable internet!!!</string>
    <string name="unknown">Unknown</string>
    <string name="unknown_issue">Unknown issue</string>

    <string name="update">Update</string>
    <string name="unknown_location">Unknown location</string>
</resources>
