<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="@dimen/default_dialog_width"
              android:layout_height="match_parent"
              android:background="@color/white"
              android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/change_pass"
        android:textColor="@color/black"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/edit_old_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="@dimen/common_size_5"
        android:layout_marginEnd="@dimen/common_size_5"
        android:layout_marginStart="@dimen/common_size_5"
        android:background="@drawable/bg_dialog_edit_text"
        android:drawablePadding="10dp"
        android:hint="@string/old_pass"
        android:imeOptions="actionNext"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@color/default_text_dark_color"/>

    <EditText
        android:id="@+id/edit_new_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="@dimen/common_size_5"
        android:layout_marginEnd="@dimen/common_size_5"
        android:layout_marginStart="@dimen/common_size_5"
        android:background="@drawable/bg_dialog_edit_text"
        android:drawablePadding="10dp"
        android:hint="@string/new_pass"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@color/default_text_dark_color"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/default_background_dark_color"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btn_ok"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginBottom="@dimen/stroke_line_bold_size"
            android:layout_marginEnd="@dimen/stroke_line_light_size"
            android:layout_marginTop="@dimen/stroke_line_bold_size"
            android:layout_weight="1"
            android:background="@drawable/default_raised_button"
            android:gravity="center"
            android:text="@string/ok"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginBottom="@dimen/stroke_line_bold_size"
            android:layout_marginStart="@dimen/stroke_line_light_size"
            android:layout_marginTop="@dimen/stroke_line_bold_size"
            android:layout_weight="1"
            android:background="@drawable/default_raised_button"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/cancel_color"
            android:textSize="20sp"/>
    </LinearLayout>
</LinearLayout>